View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024274 | Open CASCADE | OCCT:Coding | public | 2013-10-21 11:17 | 2013-12-19 13:58 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 4.0 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024274: Eliminate GCC compiler warning (wrong initialize order) | ||||
Description | It is necessary to eliminate GCC compiler warning about wrong initialize order. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Issue was resolved. Warning about wrong initialize order were eliminated. Changes are located in branch CR24274. Please, review. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR24274 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: e4eae69b235769aec7f9062b62bbffb553cdbb34 Number of compiler warnings: occt component : Linux: 328 (368 on master) Windows: 6 (6 on master) products component : Linux: 190 (190 on master) Windows: 287 (287 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 351475472 / 353780644 Total CPU difference: 43058.96000000058 / 42869.120000000774 Testing on Windows: Total MEMORY difference: 407129196 / 407041908 Total CPU difference: 36360.65625 / 37415.5625 There are not differences in images found by testdiff. |
occt: master 2f6cb3ac 2013-10-21 08:04:56
Committer: bugmaster Details Diff |
0024274: Eliminate GCC compiler warning (wrong initialize order) Eliminated GCC compiler warning about wrong initialize order |
Affected Issues 0024274 |
|
mod - src/Adaptor3d/Adaptor3d_TopolTool.cxx | Diff File | ||
mod - src/Aspect/Aspect_ColorScale.cxx | Diff File | ||
mod - src/BOPDS/BOPDS_DS.cxx | Diff File | ||
mod - src/BOPTools/BOPTools_AlgoTools_1.cxx | Diff File | ||
mod - src/BOPTools/BOPTools_ConnexityBlock.hxx | Diff File | ||
mod - src/BRepFill/BRepFill_PipeShell.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_PrinterContext.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File | ||
mod - src/QANewModTopOpe/QANewModTopOpe_Limitation.cxx | Diff File | ||
mod - src/StepToGeom/StepToGeom_MakeTrimmedCurve2d.cxx | Diff File | ||
mod - src/V3d/V3d_View.cxx | Diff File | ||
mod - src/Voxel/Voxel_FastConverter.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-21 11:17 |
|
New Issue | |
2013-10-21 11:17 |
|
Assigned To | => ski |
2013-10-21 11:18 |
|
Status | new => assigned |
2013-10-21 12:59 |
|
Note Added: 0026159 | |
2013-10-21 12:59 |
|
Assigned To | ski => abv |
2013-10-21 12:59 |
|
Status | assigned => resolved |
2013-10-21 14:38 |
|
Note Added: 0026169 | |
2013-10-21 14:38 |
|
Assigned To | abv => bugmaster |
2013-10-21 14:38 |
|
Status | resolved => reviewed |
2013-10-21 15:24 |
|
Assigned To | bugmaster => mkv |
2013-10-22 08:12 |
|
Note Added: 0026184 | |
2013-10-22 08:13 |
|
Test case number | => Not needed |
2013-10-22 08:13 |
|
Assigned To | mkv => bugmaster |
2013-10-22 08:13 |
|
Status | reviewed => tested |
2013-10-22 09:53 |
|
Target Version | => 6.7.0 |
2013-10-25 14:42 | bugmaster | Changeset attached | => occt master 2f6cb3ac |
2013-10-25 14:42 | bugmaster | Status | tested => verified |
2013-10-25 14:42 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |
2014-01-11 11:58 |
|
Category | OCCT Release:BUILD => OCCT:Coding |