0024274: Eliminate GCC compiler warning (wrong initialize order) Eliminated GCC compiler warning about wrong initialize order