src/BRepFill/BRepFill_PipeShell.cxx
@@ -210,8 +210,8 @@ static Standard_Boolean IsSameOriented(const TopoDS_Shape& aFace,
 //=======================================================================
 BRepFill_PipeShell::BRepFill_PipeShell(const TopoDS_Wire& Spine)
                       :  mySpine(Spine), 
-                         myTrihedron(GeomFill_IsCorrectedFrenet),
                          myForceApproxC1(Standard_False),
+						 myTrihedron(GeomFill_IsCorrectedFrenet),
                          myTransition(BRepFill_Modified),
                          myStatus(GeomFill_PipeOk)
 {
